# ogc4_interface

./: .buildinfo  .gitignore  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  release.yml
_sources/: README.md
data/: ogc4_mcz_weights.hdf5
docs/: _config.yml  make_plots.py
src/ogc4_interface/: build_cache.py  cacher.py  event.py  observing_run.py  ogc_prior.py  plotting.py  population_mcz.py  summary.py  utils.py
src/ogc4_interface/ogc_prior/: __init__.py  cosmology.py  dvc_dz.py  ogc_prior.py
src/ogc4_interface/plotting/: __init__.py  cmap_generator.py  contour.py  plotting.py
tests/: conftest.py  test_dvdz.py  test_event.py  test_ogc_prior.py  test_plotting.py  test_population.py  test_summary.py  test_weights_builder.py
