[train-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
train-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["ogc4_interface*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["ogc4_interface.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project]
name = "ogc4_interface"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.8"
description = "Interface to OGC-4 (https://github.com/gwastro/4-ogc)"
readme = "README.md"
authors = [
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pycbc",
    "colorlog",
    "tqdm",
    "h5py",
    "matplotlib",
    "pandas",
    "seaborn",
    "colormath"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]",
    "pre-commit",
    "flake8>=5.0.4",
    "black==22.10.0",
    "jupyter-book",
    "pydata_sphinx_theme"
]

[tool.setuptools_scm]
version_file = "src/ogc4_interface/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/COMPAS-Surrogate/lnl_surrogate"
"Bug Reports" = "https://github.com/COMPAS-Surrogate/lnl_surrogate/issues"
"Source" = "https://github.com/COMPAS-Surrogate/lnl_surrogate/"



[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | train
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]

# CLI script
[project.scripts]
train_lnl_surrogate = "lnl_surrogate.cli:cli_train"
plot_kl_distances = "lnl_surrogate.cli:cli_plot_kl_distances"
build_surrogate = "lnl_surrogate.cli:cli_build_surrogate"
